snapshots/care/data4life/hc-result-sdk-kmp/error/ecb7fdf/error-ecb7fdf.pom.sha1
549ca2392771e1310f394a43e3a550e413ce742e